--- a/frontend/src/app/annotator/page/page.component.scss
+++ b/frontend/src/app/annotator/page/page.component.scss
@@ -4,4 +4,7 @@
   margin-bottom: 10px;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: auto;
+  margin-bottom: 8px;
 }
